--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "start": "next start",
     "lint": "next lint",
     "lint-fix": "next lint --fix --ext .tsx .",
-    "format": "eslint src --fix && prettier --write 'src/**/*.{js,ts,tsx,css}'"
+    "format": "eslint src --fix && prettier --write 'src/**/*.{js,ts,tsx,css}'",
+    "prepare": "husky"
+  },
+  "lint-staged": {
+    "src/**/*.{ts,tsx}": "npm run lint-fix"
   },
   "dependencies": {
     "next": "^14.2.15",
@@ -23,6 +27,8 @@
     "eslint-config-next": "14.2.15",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "^17.1.0",
+    "husky": "^9.1.6",
+    "lint-staged": "^15.2.10",
     "postcss": "^8",
     "prettier": "^3.3.3",
     "tailwindcss": "^3.4.1",
