--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,7 @@
 {
-  "extends": [
-    "next/core-web-vitals",
-    "next/typescript"
-  ]
+  "rules": {
+    //"semi": ["error", "always"]
+    //"semi": ["off"]
+  },
+  "extends": ["next/core-web-vitals", "next/typescript", "prettier"]
 }
